--- a/js/package.json
+++ b/js/package.json
@@ -34,7 +34,7 @@
     "url-loader": "^1.1.1"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^2.0",
+    "@jupyter-widgets/base": "^2 || ^3",
     "jstree": "~3.3.9",
     "lodash": "^4.17.4"
   },
