--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,29 +10,43 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Install node
-      uses: actions/setup-node@v1
+
+    - uses: actions/checkout@v2
+
+    - name: Setup conda
+      uses: goanpeca/setup-miniconda@v1
       with:
-       node-version: '10.x'
-    - name: Install Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.7'
-        architecture: 'x64'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install jupyterlab
+        mamba-version: "*"
+        channels: conda-forge/label/jupyterlab_rc, conda-forge/label/jupyterlab_server_rc, conda-forge/label/jupyterlab_widgets_rc, conda-forge
+
+    - name: Mamba install dependencies
+      shell: bash -l {0}
+      run: mamba install python=3.8 pip nodejs
+
+    - name: Mamba install JupyterLab 3
+      shell: bash -l {0}
+      run: mamba install jupyterlab=3 ipywidgets jupyterlab_widgets
+
     - name: Install the ipytree Python package
+      shell: bash -l {0}
+      run: pip install .
+
+    - name: Check installation files
+      shell: bash -l {0}
       run: |
-        python -m pip install .
+        test -d $CONDA_PREFIX/share/jupyter/nbextensions/ipytree
+        test -f $CONDA_PREFIX/share/jupyter/nbextensions/ipytree/extension.js
+        test -f $CONDA_PREFIX/share/jupyter/nbextensions/ipytree/index.js
+        test -d $CONDA_PREFIX/share/jupyter/labextensions/ipytree
+        test -f $CONDA_PREFIX/share/jupyter/labextensions/ipytree/package.json
+
+    - name: Check JupyterLab and Jupyter Notebook extensions
+      shell: bash -l {0}
+      run: |
         jupyter nbextension list 2>&1 | grep -ie "ipytree/extension.*enabled" -
-    - name: Install the ipytree JupyterLab extension
-      run: |
-        jupyter labextension install js
         jupyter labextension list 2>&1 | grep -ie "ipytree.*enabled.*ok" -
+
     - name: Browser check
+      shell: bash -l {0}
       run: |
         python -m jupyterlab.browser_check
