--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       uses: goanpeca/setup-miniconda@v1
       with:
         mamba-version: "*"
-        channels: conda-forge/label/jupyterlab_rc, conda-forge/label/jupyterlab_server_rc, conda-forge/label/jupyterlab_widgets_rc, conda-forge
+        channels: conda-forge
 
     - name: Mamba install dependencies
       shell: bash -l {0}
