--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Mamba install JupyterLab 3
       shell: bash -l {0}
-      run: mamba install jupyterlab=3 ipywidgets jupyterlab_widgets
+      run: mamba install jupyterlab=3 ipywidgets=7.6
 
     - name: Install the ipytree Python package
       shell: bash -l {0}
