--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: '*'
 
+defaults:
+  run:
+    shell: bash -l {0}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,25 +18,18 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup conda
-      uses: goanpeca/setup-miniconda@v1
+      uses: conda-incubator/setup-miniconda@v2
       with:
         mamba-version: "*"
         channels: conda-forge
 
     - name: Mamba install dependencies
-      shell: bash -l {0}
-      run: mamba install python=3.8 pip nodejs
-
-    - name: Mamba install JupyterLab 3
-      shell: bash -l {0}
-      run: mamba install jupyterlab=3 ipywidgets=7.6
+      run: mamba install python=3.8 pip yarn jupyterlab=3 ipywidgets=7.6
 
     - name: Install the ipytree Python package
-      shell: bash -l {0}
       run: pip install .
 
     - name: Check installation files
-      shell: bash -l {0}
       run: |
         test -d $CONDA_PREFIX/share/jupyter/nbextensions/ipytree
         test -f $CONDA_PREFIX/share/jupyter/nbextensions/ipytree/extension.js
@@ -41,12 +38,9 @@ jobs:
         test -f $CONDA_PREFIX/share/jupyter/labextensions/ipytree/package.json
 
     - name: Check JupyterLab and Jupyter Notebook extensions
-      shell: bash -l {0}
       run: |
         jupyter nbextension list 2>&1 | grep -ie "ipytree/extension.*enabled" -
         jupyter labextension list 2>&1 | grep -ie "ipytree.*enabled.*ok" -
 
     - name: Browser check
-      shell: bash -l {0}
-      run: |
-        python -m jupyterlab.browser_check
+      run: python -m jupyterlab.browser_check
