--- a/js/package.json
+++ b/js/package.json
@@ -28,15 +28,15 @@
     "prepublish": "npm run clean && npm run build"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.0.0-rc.4",
-    "webpack": "^4.41.5",
+    "@jupyterlab/builder": "^3.0.0",
+    "webpack": "^5",
     "rimraf": "^2.6.1",
     "style-loader": "^0.18.1",
     "css-loader": "^0.28.7",
     "url-loader": "^1.1.1"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^2 || ^3 || ^4.0.0-beta.1",
+    "@jupyter-widgets/base": "^2.0.1 || ^3 || ^4.0.0",
     "jstree": "~3.3.9",
     "lodash": "^4.17.4"
   },
