--- a/js/package.json
+++ b/js/package.json
@@ -35,7 +35,7 @@
     "url-loader": "^1.1.1"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^2.0.1 || ^3 || ^4.0.0",
+    "@jupyter-widgets/base": "^2.0.1 || ^3 || ^4 || ^5 || ^6",
     "jstree": "~3.3.9",
     "lodash": "^4.17.4"
   },
