--- a/js/package.json
+++ b/js/package.json
@@ -27,12 +27,12 @@
     "clean": "rimraf dist/ && rimraf ../ipytree/labextension/ && rimraf ../ipytree/nbextension"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.0.0",
-    "webpack": "^5",
-    "rimraf": "^2.6.1",
-    "style-loader": "^0.18.1",
-    "css-loader": "^0.28.7",
-    "url-loader": "^1.1.1"
+    "@jupyterlab/builder": "^3.4.5",
+    "css-loader": "^6.7.1",
+    "rimraf": "^3.0.2",
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5"
   },
   "dependencies": {
     "@jupyter-widgets/base": "^2.0.1 || ^3 || ^4 || ^5 || ^6",
